clusters/main/kubernetes/apps/authelia/app/authelia.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: authelia
      app.kubernetes.io/name: authelia
      pod.name: main
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: authelia
        app.kubernetes.io/name: authelia
        pod.name: main
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
        - name: authelia
          image: ghcr.io/authelia/authelia:4.39.15@sha256:d23ee3c721d465b4749cc58541cda4aebe5aa6f19d7b5ce0afebb44ebee69591
          imagePullPolicy: IfNotPresent
          ports:
            - name: main
              containerPort: 9091
          startupProbe:
            httpGet:
              path: /api/health
              port: 9091
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /api/health
              port: 9091
            initialDelaySeconds: 10
            periodSeconds: 12
            timeoutSeconds: 5
            successThreshold: 2
            failureThreshold: 4
          livenessProbe:
            httpGet:
              path: /api/health
              port: 9091
            initialDelaySeconds: 12
            periodSeconds: 15
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          resources:
            limits:
              cpu: 1500m
              memory: 2400Mi
            requests:
              cpu: 75m
              memory: 200Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 568
            runAsNonRoot: true
            runAsUser: 568
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: config
              mountPath: /config
            - name: configfile
              mountPath: /configuration.yaml
              subPath: configuration.yaml
              readOnly: true
            - name: devshm
              mountPath: /dev/shm
            - name: secrets
              mountPath: /config/secrets
              readOnly: true
            - name: shared
              mountPath: /shared
            - name: tmp
              mountPath: /tmp
            - name: varlogs
              mountPath: /var/logs
            - name: varrun
              mountPath: /var/run
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
      volumes:
        - name: configfile
          configMap:
            name: authelia-configfile
        - name: devshm
          emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
        - name: shared
          emptyDir: {}
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
        - name: varlogs
          emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
        - name: varrun
          emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
        - name: config
          persistentVolumeClaim:
            claimName: authelia-config
        - name: secrets
          secret:
            secretName: authelia-oidc-secret
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
spec:
  type: LoadBalancer
  allocateLoadBalancerNodePorts: false
  loadBalancerIP: ${AUTHELIA_IP}
  selector:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia
    pod.name: main
  ports:
    - name: main
      port: 9091
      targetPort: 9091
