clusters/main/kubernetes/apps/authelia/app/redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authelia-redis
spec:
  replicas: 1
  revisionHistoryLimit: 3
  serviceName: authelia-redis
  selector:
    matchLabels:
      app.kubernetes.io/instance: authelia
      app.kubernetes.io/name: redis
      pod.name: main
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: authelia
        app.kubernetes.io/name: redis
        pod.name: main
    spec:
      automountServiceAccountToken: false
      containers:
        - name: authelia-redis
          image: docker.io/bitnamisecure/valkey:latest@sha256:97260e00bdf1fa52217005382e69733a36cb36121ba3696abe75cc9f26377136
          imagePullPolicy: IfNotPresent
          ports:
            - name: main
              containerPort: 6379
          startupProbe:
            exec:
              command:
                - sh
                - -c
                - /health/ping_readiness_local.sh 2
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 60
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - /health/ping_readiness_local.sh 2
            initialDelaySeconds: 10
            periodSeconds: 12
            timeoutSeconds: 5
            successThreshold: 2
            failureThreshold: 4
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - /health/ping_liveness_local.sh 2
            initialDelaySeconds: 12
            periodSeconds: 15
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          resources:
            limits:
              cpu: 1500m
              memory: 2400Mi
            requests:
              cpu: 75m
              memory: 200Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 0
            runAsNonRoot: false
            runAsUser: 568
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: devshm
              mountPath: /dev/shm
            - name: shared
              mountPath: /shared
            - name: tmp
              mountPath: /tmp
            - name: valkey-health
              mountPath: /health
            - name: varlogs
              mountPath: /var/logs
            - name: varrun
              mountPath: /var/run
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
      volumes:
        - name: valkey-health
          configMap:
            name: authelia-redis-health
            defaultMode: 0755
            items:
              - key: ping_readiness_local.sh
                path: ping_readiness_local.sh
              - key: ping_liveness_local.sh
                path: ping_liveness_local.sh
              - key: ping_readiness_master.sh
                path: ping_readiness_master.sh
              - key: ping_liveness_master.sh
                path: ping_liveness_master.sh
              - key: ping_liveness_local_and_master.sh
                path: ping_liveness_local_and_master.sh
              - key: ping_readiness_local_and_master.sh
                path: ping_readiness_local_and_master.sh
        - name: devshm
          emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
        - name: shared
          emptyDir: {}
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
        - name: varlogs
          emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
        - name: varrun
          emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
---
apiVersion: v1
kind: Service
metadata:
  name: authelia-redis
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: redis
    pod.name: main
  ports:
    - name: main
      port: 6379
      targetPort: 6379
